--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <groupId>com.hmdp</groupId>
     <artifactId>rrfaxian</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>hm-dianping</name>
+    <name>rrfaxian</name>
     <description>Demo project for Spring Boot</description>
     <properties>
         <java.version>1.8</java.version>
