--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,13 +5,13 @@ spring:
     name: rrfx
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://192.168.214.128:3306/hmdp?useSSL=false&serverTimezone=UTC
-    username: root
-    password: Fl020910.
+    url: jdbc:mysql://**********/rrfx?useSSL=false&serverTimezone=UTC
+    username:
+    password:
   redis:
-    host: 192.168.214.128
-    port: 6379
-    password: 123456
+    host:
+    port:
+    password:
     lettuce:
       pool:
         max-active: 10
